// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={50000}
      createdAt={-345600000}
      description="Rent"
      id="1"
      key="1"
      note="December Rent"
    />
    <ExpenseListItem
      amount={50800}
      createdAt={86400000}
      description="Car"
      id="2"
      key="2"
      note="Civic"
    />
    <ExpenseListItem
      amount={3500}
      createdAt={604800000}
      description="Water Bill"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`Should render message if no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses to display
      </span>
    </div>
  </div>
</div>
`;
